Add better error support to Weather form. Add Cypress with a set of cypress e2e tests for the weather form

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "react": "19.0.0-rc-02c0e824-20241028",
