--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "15.0.2",
+    "cypress": "^13.15.1"
   }
 }
